# ROS

EulersAng/: CMakeLists.txt  package.xml
EulersAng/src/: EulersAng.cpp
agrobit_msg/: CMakeLists.txt  package.xml
agrobit_msg/include/agrobit_msg/: enums.h
agrobit_msg/msg/: all_sensor.msg  chat.msg  direction_and_speed_wheels.msg  ecan_e01s_status.msg  indication.msg  kinematics_msg.msg  mileage.msg  sensors.msg  status_msg.msg  target_values.msg  wheel_data.msg  wheels_electrical.msg  wheels_kinematics.msg
can_transceiver/: CMakeLists.txt  package.xml
can_transceiver/include/can_transceiver/: can_transceiver.h
can_transceiver/src/: can_transceiver.cpp  can_transceiver_start.cpp
can_transceiver_2/: CMakeLists.txt  package.xml
can_transceiver_2/include/can_transceiver_2/: can_transceiver_2.h
can_transceiver_2/src/: can_transceiver_2.cpp  can_transceiver_2_start.cpp
cult_node/: CMakeLists.txt  package.xml
cult_node/config/: parameters.yaml
cult_node/include/cult_node/: cult_node.h
cult_node/src/: cult_node.cpp  cult_node_start.cpp
imu_l3gd20_node/: CMakeLists.txt  package.xml
imu_l3gd20_node/include/imu_l3gd20_node/: imu_l3gd20_node.h
imu_l3gd20_node/src/: imu_l3gd20_node.cpp  imu_l3gd20_node_start.cpp
sensors_data_processing/: CMakeLists.txt  package.xml
sensors_data_processing/include/sensors_data_processing/: sensors_data_processing.h
sensors_data_processing/src/: sensors_data_processing.cpp  sensors_data_processing_start.cpp
wheels_controller/: CMakeLists.txt  package.xml
wheels_controller/config/: wheels_controller_config.yaml
wheels_controller/include/wheels_controller/: wheels_controller.h
wheels_controller/src/: wheels_controller.cpp  wheels_controller_start.cpp
